<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_gradient"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_send_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_email"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/et_enter_address_of_recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address_of_recipient"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_send_mail"
                android:textColorHint="@color/black"/>

            <EditText
                android:id="@+id/et_your_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/et_enter_address_of_recipient"
                android:textColorHint="@color/black"/>

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_message"
                android:minHeight="120dp"
                android:gravity="top"
                android:inputType="text"
                android:maxLength="500"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/et_your_email_address"
                android:textColorHint="@color/black"/>

            <Button
                android:id="@+id/btn_send_mail_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_mail_now"
                android:textAllCaps="false"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/et_message"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>